--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>1zl8l.app.link</string>
+		<string>1zl8l-alternate.app.link</string>
+	</array>
 </dict>
 </plist>
