--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   permission_handler: ^9.0.1
   segmented_button_slide: ^1.0.4
+  flutter_branch_sdk: ^8.2.0
   share_plus: ^10.0.0
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
