--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Satsails
 description: "Sail your wealth to the cloud!"
 publish_to: 'none'
-version: 1.1.1+54
+version: 1.2.0+2
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -55,6 +55,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   permission_handler: ^9.0.1
   segmented_button_slide: ^1.0.4
+  flutter_branch_sdk: ^8.2.0
   share_plus: ^10.0.0
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
