--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   msh_checkbox: ^2.0.1
   vibration: ^2.0.1
   quickalert: ^1.1.0
+  overlay_support: ^2.1.0
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
