--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   http: ^1.2.1
   local_auth: ^2.1.8
   hive: ^2.2.3
-  flutter_icon_snackbar: ^1.2.1
+  awesome_snackbar_content: ^0.1.4
   msh_checkbox: ^2.0.1
   vibration: ^2.0.1
   quickalert: ^1.1.0
