--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,6 @@ dependencies:
   share_plus: ^10.0.0
   introduction_screen: ^3.1.14
   flutter_svg: ^2.0.10+1
-  cpf_cnpj_validator: ^2.0.0
   intl: ^0.19.0
   coingecko_api: ^2.0.1
   flutter_image_slideshow: ^0.1.6
@@ -80,6 +79,7 @@ dependencies:
       path: packages/pusher_beams
       ref: master
   flutter_keyboard_done: ^1.0.1
+  dart_pusher_channels: ^1.2.3
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_dotenv: ^5.1.0
