--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   local_auth: ^2.1.8
   hive: ^2.2.3
   encrypt: ^5.0.3
-  awesome_snackbar_content: ^0.1.4
+  delightful_toast: ^1.1.0
   msh_checkbox: ^2.0.1
   vibration: ^2.0.1
   quickalert: ^1.1.0
