--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,23 +24,19 @@ dependencies:
   quickalert: ^1.1.0
   overlay_support: ^2.1.0
   webview_flutter: ^4.5.0
-  qr_flutter: ^4.1.0
-  qr_code_scanner: ^1.0.1
+#  qr_flutter: ^4.1.0
+#  qr_code_scanner: ^1.0.1
+  mobile_scanner: ^6.0.2
 #  ai_barcode_scanner 3.4.3 for web compil
   fl_chart: ^0.66.2
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
-#  Need windows linux and web compils
-  bdk_flutter: ^0.31.2-dev.2
+  bdk_flutter: ^0.31.2
   bolt11_decoder:
     git:
       url: https://github.com/mateusfsilva/dart_bolt11_decoder.git
       ref: master
-#  need windows linux ios and mac and web compils
-  lwk_dart:
-    git:
-      url: https://github.com/SatoshiPortal/lwk-dart.git
-      ref: trunk
+  lwk: ^0.1.5
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
@@ -54,28 +50,23 @@ dependencies:
   path_provider: ^2.1.4
   decimal: ^3.0.2
   web_socket_channel: ^2.1.0
-  permission_handler: ^9.0.1
+  permission_handler: ^11.3.1
   segmented_button_slide: ^1.0.4
-  flutter_branch_sdk: ^8.2.0
+  flutter_branch_sdk: ^8.3.1
   share_plus: ^10.0.0
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   coingecko_api: ^2.0.1
   flutter_image_slideshow: ^0.1.6
-  crisp_chat: ^2.0.4
+  crisp_chat: ^2.2.3
   currency_formatter: ^2.2.1
   flutter_local_notifications: ^17.2.3
   faker: ^2.2.0
   conduit_password_hash: ^5.1.3
   flutter_keyboard_visibility: ^6.0.0
   bech32: ^0.2.2
-  pusher_beams:
-    git:
-      url: https://github.com/sokhorninit/push-notifications-flutter
-      path: packages/pusher_beams
-      ref: master
-  flutter_keyboard_done: ^1.0.1
-#  dart_pusher_channels: ^1.2.3
+#  flutter_keyboard_done: ^1.0.1
+  dart_pusher_channels: ^1.2.3
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_dotenv: ^5.1.0
