--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   quickalert: ^1.1.0
   overlay_support: ^2.1.0
   webview_flutter: ^4.5.0
-#  qr_flutter: ^4.1.0
+  qr_flutter: ^4.1.0
 #  qr_code_scanner: ^1.0.1
   mobile_scanner: ^6.0.2
 #  ai_barcode_scanner 3.4.3 for web compil
@@ -65,7 +65,7 @@ dependencies:
   conduit_password_hash: ^5.1.3
   flutter_keyboard_visibility: ^6.0.0
   bech32: ^0.2.2
-#  flutter_keyboard_done: ^1.0.1
+#  pusher_beams: ^1.1.2
   dart_pusher_channels: ^1.2.3
 dev_dependencies:
   build_runner: ^2.4.11
