--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,8 @@ dependencies:
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
   bdk_flutter: ^0.31.2
-  bolt11_decoder:
-    git:
-      url: https://github.com/mateusfsilva/dart_bolt11_decoder.git
-      ref: master
+  dart_bolt12_decoder: ^0.8.0
+  bolt11_decoder: ^1.0.2
   lwk: ^0.1.5
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
@@ -48,7 +46,7 @@ dependencies:
   url_launcher: ^6.2.6
   i18n_extension: ^12.0.1
   path_provider: ^2.1.4
-  decimal: ^3.0.2
+  decimal: ^2.3.2
   web_socket_channel: ^2.1.0
   permission_handler: ^11.3.1
   segmented_button_slide: ^1.0.4
@@ -66,7 +64,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   bech32: ^0.2.2
 #  pusher_beams: ^1.1.2
-  dart_pusher_channels: ^1.2.3
+#  dart_pusher_channels: ^1.2.3
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_dotenv: ^5.1.0
