--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ app.*.map.json
 /.env
 /private_key.pem
 /public_key.pem
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+firebase.json
