--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,7 @@ dependencies:
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
   bdk_flutter: ^0.31.2
-#  breez_sdk:
-#    git:
-#      url: https://github.com/breez/breez-sdk-greenlight
-#      path: libs/sdk-flutter
-#      ref: 0.6.6-frb-v2
+#  lightspark_wallet: ^0.1.0
   bitcoin_message_signer: ^1.0.2
   bolt11_decoder: ^1.0.2
   lwk: ^0.1.5
@@ -68,9 +64,9 @@ dependencies:
   bech32: ^0.2.2
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
-  pusher_client: ^2.0.0
+  dart_pusher_channels: ^1.2.3
 dependency_overrides:
-  uuid: ^4.1.0
+  rxdart: ^0.28.0
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_dotenv: ^5.1.0
