--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,8 @@ flutter {
 
 dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
