--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ flutter:
     - lib/assets/app_icon.png
     - lib/assets/satsails.png
     - lib/assets/satsails.svg
+    - lib/assets/satsails.svg
+    - lib/assets/eulen-logo.svg
     - lib/assets/frame.svg
     - lib/assets/depix.png
     - lib/assets/eurx.png
