--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
-  flutter_localizations:
-    sdk: flutter
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
   go_router: ^14.3.0
@@ -41,7 +41,6 @@ dependencies:
   flutter_card_swiper: ^7.0.0
   calendar_date_picker2: ^0.5.6
   url_launcher: ^6.2.6
-  i18n_extension: ^12.0.1
   path_provider: ^2.1.4
   decimal: ^2.3.2
   web_socket_channel: ^2.1.0
@@ -50,7 +49,6 @@ dependencies:
   flutter_branch_sdk: ^8.3.1
   share_plus: ^10.0.0
   flutter_svg: ^2.0.10+1
-  intl: ^0.19.0
   coingecko_api: ^2.0.1
   flutter_image_slideshow: ^0.1.6
   crisp_chat: ^2.2.3
@@ -65,15 +63,18 @@ dependencies:
   android_notification_icons: ^0.0.1
   dart_pusher_channels: ^1.2.3
   firebase_crashlytics: ^4.1.0
+  flutter_dotenv: ^5.1.0
+  i18n_extension: ^15.0.4
+
 dev_dependencies:
   build_runner: ^2.4.11
-  flutter_dotenv: ^5.1.0
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   dependency_validator: ^3.0.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+
 flutter:
   fonts:
     - family: lbtc_icon
@@ -83,7 +84,6 @@ flutter:
   assets:
     - lib/assets/app_icon.png
     - lib/assets/satsails.png
-    - lib/assets/satsails.svg
     - lib/assets/satsails.svg
     - lib/assets/eulen-logo.svg
     - lib/assets/frame.svg
@@ -96,7 +96,6 @@ flutter:
     - lib/assets/bip39_english.txt
     - .env
 
-#compil incons to all envs
 flutter_launcher_icons:
   android: true
   ios: true
@@ -105,17 +104,15 @@ flutter_launcher_icons:
 
 android_notification_icons:
   image_path: 'lib/assets/satsails.png'
-  icon_name: 'ic_notification' # optional
+  icon_name: 'ic_notification'
 
 flutter_native_splash:
-  color: "#000000"  # Background color
-  image: "lib/assets/satsails.png"  # Image used for iOS
+  color: "#000000"
+  image: "lib/assets/satsails.png"
   web: false
   android: true
   android_12:
     image: "lib/assets/app_icon.png"
     icon_background_color: "#000000"
     color: "#000000"
-
   image_android: "lib/assets/app_icon.png"
-
