--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   firebase_crashlytics: ^4.1.0
   flutter_dotenv: ^5.1.0
   i18n_extension: ^15.0.4
+  firebase_app_check: ^0.3.1
 
 dev_dependencies:
   build_runner: ^2.4.11
