--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
                 <!-- REPLACE `android:host` with your `app.link` domain -->
                 <data android:scheme="https" android:host="1zl8l.app.link" />
                 <!-- REPLACE `android:host` with your `-alternate` domain (required for proper functioning of App Links and Deepviews) -->
-                <data android:scheme="https" android:host="1zl8l-alternate.app.link" />
+                <data android:scheme="https" android:host="links.satsails.com" />
             </intent-filter>
         </activity>
 
