--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   i18n_extension: ^15.0.4
   firebase_app_check: ^0.3.1
+  animated_notch_bottom_bar: ^1.0.3
 
 dev_dependencies:
   build_runner: ^2.4.11
