--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   firebase_app_check: ^0.3.1
   dot_navigation_bar: ^1.0.2
 
+  riverpod: any
+  crypto: any
+  intl: any
 dev_dependencies:
   build_runner: ^2.4.11
   hive_generator: ^2.0.1
