--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   bitcoin_message_signer: ^1.0.2
   bolt11_decoder: ^1.0.2
   lwk: ^0.1.7
+#  lwk:
+#    path: /Users/joaolobo/code/project/libraries/lwk-dart-develop
   boltz: ^0.1.10
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
