progress on new cards

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,9 @@ flutter:
     - lib/assets/nox.svg
     - lib/assets/satsails.svg
     - lib/assets/eulen-logo.svg
+    - lib/assets/logo-spark.svg
+    - lib/assets/liquid-logo.png
+    - lib/assets/bitcoin-logo.svg
     - lib/assets/frame.svg
     - lib/assets/depix.png
     - lib/assets/eurx.png
