--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,8 @@ dependencies:
       ref: frb-upgrade
   bitcoin_message_signer: ^1.0.2
   bolt11_decoder: ^1.0.2
-  boltz:
-    # 0.1.10
-    git:
-      url: https://github.com/SatoshiPortal/boltz-dart.git
-      ref: develop
-  lwk:
-      # 0.1.7
-    git:
-      url: https://github.com/SatoshiPortal/lwk-dart.git
-      ref: develop
-
+  boltz: ^0.2.0
+  lwk: ^0.2.0
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
