update some core libraries and flutter android internals

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,14 @@
     <application
             android:label="Satsails"
             android:name="${applicationName}"
-            android:icon="@mipmap/ic_launcher">
-            android:enableOnBackInvokedCallback="true"
-        <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
-        <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
+            android:icon="@mipmap/ic_launcher"
+            android:enableOnBackInvokedCallback="true">
+        <receiver
+                android:exported="false"
+                android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
+        <receiver
+                android:exported="false"
+                android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
@@ -30,14 +34,9 @@
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
                 android:hardwareAccelerated="true"
                 android:windowSoftInputMode="adjustResize">
-            <!-- Specifies an Android theme to apply to this Activity as soon as
-                 the Android process has started. This theme is visible to the user
-                 while the Flutter UI initializes. After that, this theme continues
-                 to determine the Window background behind the Flutter UI. -->
             <meta-data
                     android:name="io.flutter.embedding.android.NormalTheme"
-                    android:resource="@style/NormalTheme"
-            />
+                    android:resource="@style/NormalTheme" />
             <meta-data
                     android:name="google_analytics_adid_collection_enabled"
                     android:value="false" />
@@ -49,44 +48,33 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
-                <!-- If utilizing $deeplink_path please explicitly declare your hosts, or utilize a wildcard(*) -->
-                <!-- REPLACE `android:scheme` with your Android URI scheme -->
                 <data android:scheme="satsails" android:host="open" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
-
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <!-- REPLACE `android:host` with your `app.link` domain -->
                 <data android:scheme="https" android:host="links.satsails.com" />
-                <!-- REPLACE `android:host` with your `-alternate` domain (required for proper functioning of App Links and Deepviews) -->
                 <data android:scheme="https" android:host="1zl8l-alternate.app.link" />
             </intent-filter>
         </activity>
-
-        <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_mDl7ypAf3rPwbm6ShWPcbaalCqlAF8LM" />
+        <meta-data
+                android:name="io.branch.sdk.BranchKey"
+                android:value="key_live_mDl7ypAf3rPwbm6ShWPcbaalCqlAF8LM" />
         <meta-data
                 android:name="flutterEmbedding"
                 android:value="2" />
     </application>
-    <!-- Required to query activities that can process text, see:
-         https://developer.android.com/training/package-visibility?hl=en and
-         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
-    <!-- Provide required visibility configuration for API level 30 and above -->
     <queries>
         <intent>
             <action android:name="android.support.customtabs.action.CustomTabsService" />
