--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,21 +11,21 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_secure_storage: ^9.0.0
-  go_router: ^14.8.1
+  flutter_secure_storage: ^9.2.4
+  go_router: ^15.1.2
   flutter_screenutil: ^5.9.3
   pin_code_fields: ^8.0.1
   http: ^1.2.1
   local_auth: ^2.1.8
   hive: ^2.2.3
   msh_checkbox: ^2.0.1
-  vibration: ^2.0.1
+  vibration: ^3.1.3
   quickalert: ^1.1.0
   overlay_support: ^2.1.0
   webview_flutter: ^4.5.0
   qr_flutter: ^4.1.0
-  mobile_scanner: ^6.0.2
-  fl_chart: ^0.66.2
+  mobile_scanner: ^7.0.0
+  fl_chart: ^1.0.0
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
 #  bdk_flutter: ^0.31.2
@@ -43,15 +43,15 @@ dependencies:
   group_button: ^5.3.4
   action_slider: ^0.7.0
   flutter_card_swiper: ^7.0.0
-  calendar_date_picker2: ^0.5.6
+  calendar_date_picker2: ^2.0.1
   url_launcher: ^6.2.6
   path_provider: ^2.1.4
   decimal: ^2.3.2
   web_socket_channel: ^3.0.2
-  permission_handler: ^11.3.1
-  segmented_button_slide: ^1.0.4
+  permission_handler: ^12.0.0+1
+  segmented_button_slide: ^2.0.0
   flutter_branch_sdk: ^8.5.0
-  share_plus: ^10.0.0
+  share_plus: ^11.0.0
   flutter_svg: ^2.0.10+1
   coingecko_api: ^2.0.1
   crisp_chat: ^2.2.5
@@ -81,11 +81,11 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.11
   hive_generator: ^2.0.1
-  flutter_launcher_icons: ^0.13.1
-  dependency_validator: ^3.0.0
+  flutter_launcher_icons: ^0.14.3
+  dependency_validator: ^4.1.3
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
   fonts:
