--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,7 @@ dependencies:
   fl_chart: ^1.0.0
   bip39: ^1.0.6
   flutter_riverpod: ^2.5.1
-#  bdk_flutter: ^0.31.2
-  bdk_flutter:
-    git:
-      url: https://github.com/LtbLightning/bdk-flutter
-      ref: frb-upgrade
+  bdk_flutter: ^0.31.3
   bitcoin_message_signer: ^1.0.2
   bolt11_decoder: ^1.0.2
   boltz: ^0.2.0
