--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   in_app_review: ^2.0.10
   upgrader: ^11.3.1
   pull_to_refresh_flutter3: ^2.0.2
+  rxdart: ^0.28.0
+  flutter_breez_liquid:
+    git:
+      url: https://github.com/breez/breez-sdk-liquid-flutter
 
 dev_dependencies:
   build_runner: ^2.4.11
