--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,6 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   go_router: ^15.1.2
   flutter_screenutil: ^5.9.3
-  pin_code_fields: ^8.0.1
-  http: ^1.2.1
   local_auth: ^2.1.8
   hive: ^2.2.3
   msh_checkbox: ^2.0.1
@@ -34,16 +32,11 @@ dependencies:
   forex_currency_conversion: ^0.9.1
   icons_plus: ^5.0.0
   loading_animation_widget: ^1.2.1
-  group_button: ^5.3.4
   action_slider: ^0.7.0
-  flutter_card_swiper: ^7.0.0
   calendar_date_picker2: ^2.0.1
-  url_launcher: ^6.2.6
-  path_provider: ^2.1.4
   decimal: ^2.3.2
   web_socket_channel: ^3.0.2
   permission_handler: ^12.0.0+1
-  segmented_button_slide: ^2.0.0
   flutter_branch_sdk: ^8.5.0
   share_plus: ^11.0.0
   flutter_svg: ^2.0.10+1
@@ -51,10 +44,7 @@ dependencies:
   crisp_chat: ^2.2.5
   currency_formatter: ^2.2.1
   flutter_local_notifications: ^17.2.3
-  faker: ^2.2.0
-  conduit_password_hash: ^5.1.3
   flutter_keyboard_visibility: ^6.0.0
-  bech32: ^0.2.2
   firebase_core: ^3.13.1
   firebase_messaging: ^15.2.6
   android_notification_icons: ^0.0.1
@@ -72,6 +62,7 @@ dependencies:
   flutter_breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-flutter
+  shimmer: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.11
