--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,36 +67,22 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_launcher_icons: ^0.14.3
+#  hive_generator: ^2.0.0
   dependency_validator: ^4.1.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
 flutter:
-  fonts:
-    - family: lbtc_icon
-      fonts:
-        - asset: lib/assets/fonts/lbtc_icon.ttf
   uses-material-design: true
   assets:
     - lib/assets/app_icon.png
     - lib/assets/satsails.png
-    - lib/assets/Ice-Logo.png
     - lib/assets/arbitrum-logo.png
-    - lib/assets/bitrefill.png
     - lib/assets/initialLogo.png
-    - lib/assets/sparkSmallIcon.png
     - lib/assets/nox.svg
     - lib/assets/satsails.svg
-    - lib/assets/eulen-logo.svg
-    - lib/assets/boltz.svg
     - lib/assets/logo-spark.svg
-    - lib/assets/liquid-logo.png
-    - lib/assets/liquid-logo-white.png
-    - lib/assets/bitcoin-logo.svg
-    - lib/assets/bitcoin-logo-white.svg
-    - lib/assets/sideshift.png
-    - lib/assets/frame.svg
     - lib/assets/depix.png
     - lib/assets/eurx.png
     - lib/assets/l-btc.png
